--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -28,7 +28,8 @@
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
