--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "web3"
   ],
   "author": "Rald Blox",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@iconify/react": "^6.0.0"
+  }
 }
