--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -20,7 +20,7 @@
     "intl-messageformat": "10.7.16",
     "lenis": "^1.3.5",
     "mongodb": "^6.17.0",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "next-themes": "0.4.6",
     "postprocessing": "^6.37.6",
     "react": "18.3.1",
@@ -29,6 +29,7 @@
     "three": "^0.167.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.1",
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "4.1.11",
