--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -13,6 +13,7 @@
     "@heroui/system": "2.4.19",
     "@heroui/theme": "2.4.18",
     "@iconify/react": "^6.0.0",
+    "@mediapipe/tasks-text": "^0.10.22-rc.20250304",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.25",
     "clsx": "2.1.1",
@@ -26,6 +27,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "^3.1.0",
+    "swiper": "^11.2.10",
     "three": "^0.167.1"
   },
   "devDependencies": {
