--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -21,14 +21,17 @@
     "intl-messageformat": "10.7.16",
     "lenis": "^1.3.5",
     "mongodb": "^6.17.0",
+    "nanoid": "^5.1.5",
     "next": "^15.3.1",
+    "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
     "postprocessing": "^6.37.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "^3.1.0",
     "swiper": "^11.2.10",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
