--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.38.17",
     "@heroui/react": "^2.8.1",
     "@heroui/system": "2.4.19",
     "@heroui/theme": "2.4.18",
@@ -26,11 +27,14 @@
     "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
     "postprocessing": "^6.37.6",
+    "qr": "^0.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "^3.1.0",
     "swiper": "^11.2.10",
     "three": "^0.167.1",
+    "viem": "^2.32.0",
+    "wagmi": "^2.15.7",
     "zod": "^4.0.5"
   },
   "devDependencies": {
