--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.38.17",
+    "@farcaster/auth-kit": "^0.8.1",
     "@heroui/react": "^2.8.1",
     "@heroui/system": "2.4.19",
     "@heroui/theme": "2.4.18",
@@ -33,7 +34,7 @@
     "recharts": "^3.1.0",
     "swiper": "^11.2.10",
     "three": "^0.167.1",
-    "viem": "^2.32.0",
+    "viem": "^2.32.1",
     "wagmi": "^2.15.7",
     "zod": "^4.0.5"
   },
@@ -43,6 +44,7 @@
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "4.1.11",
     "@types/node": "20.5.7",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/three": "^0.178.1",
