--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.38.17",
+    "@farcaster/auth-client": "^0.7.0",
     "@farcaster/auth-kit": "^0.8.1",
     "@heroui/react": "^2.8.1",
     "@heroui/system": "2.4.19",
