--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "^0.38.17",
     "@farcaster/auth-client": "^0.7.0",
     "@farcaster/auth-kit": "^0.8.1",
+    "@farcaster/miniapp-sdk": "^0.1.7",
     "@heroui/react": "^2.8.1",
     "@heroui/system": "2.4.19",
     "@heroui/theme": "2.4.18",
