--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@0xsequence/connect": "^5.3.7",
     "@farcaster/auth-client": "^0.7.0",
     "@farcaster/auth-kit": "^0.8.1",
     "@farcaster/miniapp-sdk": "^0.1.7",
@@ -19,7 +20,10 @@
     "@mediapipe/tasks-text": "^0.10.22-rc.20250304",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.25",
+    "@tanstack/react-query": "^5.83.0",
+    "0xsequence": "^2.3.23",
     "clsx": "2.1.1",
+    "ethers": "^6.13.0",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "lenis": "^1.3.5",
@@ -35,8 +39,8 @@
     "recharts": "^3.1.0",
     "swiper": "^11.2.10",
     "three": "^0.167.1",
-    "viem": "^2.32.1",
-    "wagmi": "^2.15.7",
+    "viem": "^2.33.1",
+    "wagmi": "^2.16.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
