--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@0xsequence/connect": "^5.3.7",
+    "@0xsequence/hooks": "^5.3.7",
     "@farcaster/auth-client": "^0.7.0",
     "@farcaster/auth-kit": "^0.8.1",
     "@farcaster/miniapp-sdk": "^0.1.7",
