--- a/foretell-contracts/package.json
+++ b/foretell-contracts/package.json
@@ -3,5 +3,10 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "hardhat": "^2.26.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.1",
+    "merkletreejs": "^0.5.2"
   }
 }
