--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -42,7 +42,8 @@
     "three": "^0.167.1",
     "viem": "^2.33.1",
     "wagmi": "^2.16.0",
-    "zod": "^4.0.5"
+    "zod": "^4.0.5",
+    "merkletreejs": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
