--- a/foretell-app/package.json
+++ b/foretell-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@0xsequence/checkout": "^5.3.8",
     "@0xsequence/connect": "^5.3.7",
     "@0xsequence/hooks": "^5.3.7",
     "@farcaster/auth-client": "^0.7.0",
@@ -28,6 +29,7 @@
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "lenis": "^1.3.5",
+    "merkletreejs": "^0.3.0",
     "mongodb": "^6.17.0",
     "nanoid": "^5.1.5",
     "next": "^15.3.1",
@@ -42,8 +44,7 @@
     "three": "^0.167.1",
     "viem": "^2.33.1",
     "wagmi": "^2.16.0",
-    "zod": "^4.0.5",
-    "merkletreejs": "^0.3.0"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
